--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 
     <properties>
         <junit.version>4.12</junit.version>
+        <java.version>1.8</java.version>
+        <project.encoding>utf-8</project.encoding>
     </properties>
 
     <dependencyManagement>
@@ -37,6 +39,16 @@
                     <version>2.2</version>
                     <configuration>
                         <warSourceDirectory>${basedir}/src/main/webapp</warSourceDirectory>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.6.1</version>
+                    <configuration>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
+                        <encoding>${project.encoding}</encoding>
                     </configuration>
                 </plugin>
             </plugins>
