--- a/wrma-core/pom.xml
+++ b/wrma-core/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>wrma-core</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
 
 </project>
