--- a/wrma-site/pom.xml
+++ b/wrma-site/pom.xml
@@ -5,7 +5,9 @@
         <groupId>com.sheng</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>wrma-site</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>wrma-site</name>
     <url>http://maven.apache.org</url>
@@ -15,6 +17,7 @@
         <dependency>
             <groupId>com.sheng</groupId>
             <artifactId>wrma-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <!-- test -->
@@ -24,6 +27,16 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>wrma-site</finalName>
+        <finalName>ROOT</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 </project>
