--- a/wrma-common/pom.xml
+++ b/wrma-common/pom.xml
@@ -9,13 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>wrma-core</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>wrma-common</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-    </dependencies>
+
 </project>
