--- a/wrma-site/pom.xml
+++ b/wrma-site/pom.xml
@@ -62,6 +62,13 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <!-- jackson 接口返回-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>ROOT</finalName>
